frontend/css/recommendation-page.less
/* stylelint-disable */
#recommendations {
  &:extend(#listens);
}
/* stylelint-enable */

.playlists-masonry-container{
  position: relative;
  // hide overflow behind gradient to indicate there's more
  &::after {
    content: "";
    width: 4em;
    background: linear-gradient(270deg, #fff, transparent);
    position: sticky;
    pointer-events: none;
    right: -1px;
    bottom: 0;
    height: 100%;
  }
}
.playlists-masonry{
  width: 100%;
  display: grid;
  grid-gap: 1em;
  grid-auto-rows: 150px;
  grid-auto-columns: 300px;
  grid-auto-flow: column;
  overflow-x: scroll;
  overflow-y: hidden;
  scroll-snap-type: x mandatory;
  &.dragging{
    scroll-snap-type: none;
  }
  
  > * {
    padding:1em;
    display: flex;
    align-items: flex-end;
    background-size: cover;
    background-color: #b2d4b0;
    border:none;
    scroll-snap-align: start;
    filter: unset;
    transition: filter 300ms ease-out;
    &:hover {
      filter: saturate(1.4);
      .title {
        margin-left: 5px;
      }
    }
    &.selected{
      border: 5px solid @blue;
      border-radius: 3px;
    }
    .title{
      font-family: Roboto, sans-serif;
      font-weight: 900;
      font-size:2em;
      line-height: 1.1em;
      color: @blue;
      transition: margin-left 300ms ease-out;
      margin-left: 0px;
      text-align: left;
      border: none;
    }
    .btn {
      margin-left: auto;
    }
    // Magic background image cycler
    each(range(3), {
      //We only have three backgrounds available for green (#1 is only used for weekly jams)
      &.green:nth-of-type(3n+@{value}) {
        @bgValue: (@value + 1);
        background-image: url("../img/recommendations/green-@{bgValue}.svg");
      }
    });
    each(range(4), {
      &.red:nth-of-type(4n+@{value}) {
        background-image: url("../img/recommendations/red-@{value}.svg");
      }
    });
    each(range(4), {
      &.blue:nth-of-type(4n+@{value}) {
        background-image: url("../img/recommendations/blue-@{value}.svg");
      }
    });
    
    &:nth-child(1 of .weekly-jams){
      // Make first weekly-jams element bigger and placed at the start
      grid-column-start: 1;
      grid-column-end: 3;
      grid-row-start: 1;
      grid-row-end: 3;
      background-image: url("../img/recommendations/green-1.svg");
      .title {
        width: 5em;
        font-size: 4em;
      }
      &:hover .title {
        margin-left: 10px;
      }
    }
  }
  
  @media (max-width: @screen-sm) {
    grid-auto-columns: unset;
  }
}

#selected-playlist{
  display: flex;
  flex-wrap: wrap-reverse;
  align-items: flex-end;
  gap:1em;
  margin-top: 2em;
  border-top: 1px solid @light;
  padding-top: 2em;
  
  .playlist-items{
    flex: 2;
    flex-basis: 350px;
  }
  .playlist-settings{
    width: 350px;
    flex:1;
    flex-basis: 300px;
    padding: 1em;
    overflow: hidden;

    .playlist-settings-header{
      background: @blue;
      color: @white;
      padding: 1em;
      margin: -1em -1em 0;
      .title{
        margin-top:0.6em;
        font-size: 1.3em;
        font-weight: 600;
      }
    }
    .buttons {
      padding: 0.7em 0;
    }
  }
}

